# pipecat-test

./: AGENTS.md  README.md  env.example  pyproject.toml
dev/: utils.py
dev/OpenAIRealtimeLLMServiceExt/: conftest.py  test_openai_realtime_llm_service.py
scripts/: local_voice_bot.py  run_agent.py  telnyx.py
src/pipecat_extension/services/: openai_realtime_llm_service.py
src/pipecat_test/context_injector/: __init__.py  context_injector.py
tests/: test_context_injector.py
tests/services/: test_openai_realtime_llm_service.py
